<resources>
    <string name="app_name">Bulsatcom</string>
    <string name="contentDescription">disables android warning about missing attribute contentDescription in ImageView</string>
    <string name="connection_lost">Connection lost</string>
    <string name="internet_check_service">Internet Check Service</string>
    <string name="today">Днес</string>
    <string name="yesterday">Вчера</string>
    <string name="tomorrow">Утре</string>
    <string name="scheduleHeaderDateTimeFormat">MMM dd</string>

    <!-- Status Bar -->
    <string name="menu">Меню</string>
    <string name="back">Назад</string>
    <string name="navigation">Навигация</string>
    <string name="details">Детайли</string>
    <string name="add">Добавяне</string>
    <string name="remove">Премахване</string>
    <string name="start_reorder">Начало Преместване</string>
    <string name="stop_reorder">Край Преместване</string>

    <string name="programInfoDateFormat">dd/MM/yyyy г.</string>
    <string name="programInfoTimeFormat">HH:mm</string>
    <string name="programInfoTimeRange">%1$s - %2$s</string>
    <string name="programInfoPager">%1$d/%2$d</string>
    <string name="play">Play</string>
    <string name="addToWatchlist">To watchlist</string>
    <string name="removeFromWatchlist">Unwatch</string>
    <string name="like">Like</string>
    <string name="loading">Зареждане&#8230;</string>
    <string name="all_channels">Всички Канали</string>
    <string name="my_channels">Мои Канали</string>
    
    <!-- Networks -->
    <string name="wifi">Wi-Fi</string>
    <string name="ethernet">Ethernet</string>
    <string name="choose_connection">Choose Connection</string>
    <string name="password_prompt">Въведи парола за %1$s</string>
    <string name="edit_prompt">Въведи стойност за %1$s</string>
    <string name="eth_manual_settings">Ethernet Manual Settings</string>
    <string name="eth_ip">IP</string>
    <string name="eth_mask">Mask</string>
    <string name="eth_gateway">Gateway</string>
    <string name="eth_dns1">DNS1</string>
    <string name="eth_dns2">DNS2</string>
    <string name="eth_setup_dhcp">DHCP</string>
    <string name="eth_setup_manual">Manual</string>
    
    <!-- Menu -->
    <string name="menu_epg">Програмата</string>
    <string name="menu_channels">Канали</string>
    <string name="menu_tv">Телевизия</string>
    <string name="menu_watchlist">Напомняне</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_webtv">Интернет ТВ</string>

    <!--  Settings items -->
    <string name="menu_settings_ethernet">Мрежа</string>
    
    <string name="ok">Добре</string>
    <string name="cancel">Отказ</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="clear">Изчисти</string>

    <!-- Watchlist -->
    <string name="watchlist_notify_title">Напомняне</string>
    <string name="watchlist_notify_soon">След %1$d мин започва %2$s по %3$s. Искате ли да смените канала?</string>
    <string name="watchlist_notify_now">Започва %1$s по %2$s. Искате ли да смените канала?</string>
    
    <string name="msg_title_error">Грешка</string>
    <string name="error_permission_network_config">Няма права за конфигурация на мрежата</string>

    <!-- FIXME: Network Wizard -->
    <string name="network_connecting">СВЪРЗВАНЕ С ИНТЕРНЕТ</string>
    <string name="network_error">ПРОБЛЕМ С ИНТЕРНЕТ ВРЪЗКАТА</string>
    <string name="network_retry_button">Отново</string>
    <string name="network_settings_button">Настройки</string>
    
    <!-- EPG -->
    <string name="no_epg_info">НЯМА ИНФОРМАЦИЯ</string>

</resources>
